--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -250,6 +250,7 @@
     border: 1px solid #000;
     border-radius: 2px;
     flex-shrink: 0;
+    cursor: pointer;
     /* background-color: var(--bg-light); */ /* 為了增加底色但沒作用 */
 
     /* GPT大神提供-增加checkbox底色 */
