--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -2,7 +2,7 @@
   <header class="header container container-sm-full">
     <nav class="header-nav d-flex jc-sb ai-c">
       <h1 class="d-flex ai-c">
-        <a class="logo" href="./index.html"
+        <a class="logo" href="index.html"
           ><img src="../assets/images/logo-white.png" alt="Glasses-Logo"
         /></a>
       </h1>
