--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -3,7 +3,7 @@
     <div class="footer-header d-flex jc-sb ai-fs">
       <div>
         <ul class="footer-nav-list d-flex jc-sb g-48">
-          <li><a href="#">首頁</a></li>
+          <li><a href="index.html">首頁</a></li>
           <li><a href="#">系列鏡框</a></li>
           <li><a href="#">門市據點</a></li>
           <li><a href="#">部落格</a></li>
